--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: helvetica;
 }
 header {
-  background-image: image("resources/images/the-flatiron-building.png");
+  background-image: url("images/the-flatiron-building.png");
 }
 .nav{
   color: White;
@@ -17,7 +17,7 @@ h1 {
 }
 
 .background {
-  background-image: image("resources/images/the-flatiron-building.png");
+  background-image: url("images/the-flatiron-building.png");
   font-size: 23px;
   font-weight: bold;
   color: white;
