--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: helvetica;
 }
 header {
-  background-image: url("resources/images/the-flatiron-building.png");
+  background: url("/images/the-flatiron-building.png");
 }
 .nav{
   color: White;
