--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ h1 {
   color: white;
 }
 
-.btn-nav{
+.nav{
   color: white;
 }
 
@@ -23,20 +23,20 @@ h1 {
   font-weight: bold;
   color: white;
 }
-h2{
+h2 {
   font-size: 32px;
   font-weight: bold;
 }
-h3{
+h3 {
   font-size: 23px;
   font-weight: bold;
 }
 
-p{
+p {
   font-size: 14px;
 }
-footer{
-  background color: dimgray;
+footer {
+  background-color: dimgray;
   text-align: left;
   color: white;
 }
